--- a/BusBoard.ConsoleApp/BusBoard.ConsoleApp.csproj
+++ b/BusBoard.ConsoleApp/BusBoard.ConsoleApp.csproj
@@ -50,10 +50,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrivalInformation.cs" />
+    <Compile Include="BusBoard.cs" />
     <Compile Include="PostCodeInformation.cs" />
     <Compile Include="PostCodeResponse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StopPoint.cs" />
+    <Compile Include="StopPointsResponseWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
