trying to add a planner, run into newtonsoft exceptions

--- a/BusBoard.Api/BusBoard.Api.csproj
+++ b/BusBoard.Api/BusBoard.Api.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="ArrivalInformation.cs" />
     <Compile Include="BusFinder.cs" />
+    <Compile Include="JourneyPlanner.cs" />
     <Compile Include="PostCodeInformation.cs" />
     <Compile Include="PostCodeResponse.cs" />
     <Compile Include="Program.cs" />
